# drishti-gcs-app

./: .gitignore  CLAUDE.md  README.md
backend/: .env.example  main.py  pyproject.toml
backend/config/: preflight.yaml  rpi.yaml
backend/drishti/perception/: solver_timer.py
backend/routers/: logger.py  pipeline.py  preflight.py  replay.py  session.py  telemetry.py
backend/scripts/: benchmark.py  extract_ros2_bag.py  postflight_report.py
backend/services/: mock_ssh.py  nmea_parser.py  preflight.py  replay.py  ros2_bag_extractor.py  session_loader.py  ssh_client.py  timestamps_csv.py
backend/tests/: conftest.py  test_panel1_integration.py  test_postflight_harness.py  test_preflight.py  test_preflight_endpoint.py  test_replay.py  test_replay_endpoint.py  test_solver_timer.py  test_ssh_client.py
backend/tests/fixtures/synthetic_deolali_session/: deolali_tiledb.yaml  pipeline_results.json  timestamps.csv
docs/: postflight_workflow.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/components/: AlgorithmPanel.jsx  BenchmarkPanel.jsx  ChecklistPanel.jsx  ChecklistPanel.test.jsx  LiveFeedPanel.jsx  LiveMapPanel.jsx  LoggingPanel.jsx  LoggingPanel.test.jsx  ReplayPanel.jsx  ReplayPanel.test.jsx
