[project]
name = "drishti-gcs-backend"
version = "0.1.0"
description = "DRISHTI-NAV Ground Control Station Backend"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "python-dotenv>=1.0.0",
    "sse-starlette>=2.1.0",
    "numpy>=1.26.0",
    "Pillow>=10.0.0",
    "paramiko>=5.0.0",
    "pyyaml>=6.0.3",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
]
